# mr.cap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
images/: simplegen.json
include/glad/: glad.h
include/implot/: implot_internal.h
include/mrcap/: FactorGraph.h  Geometry.h  Logger.h  MainWindow.h  Metrics.h  MotionModelArc.h  Optimizer.h  Plotter.h  ROSCommunications.h  SDF.h  Trajectory.h  Utils.h  customFactor.h  mrcap.h
include/mrcap/DataTypes/: Atan2LUT.h  CovarianceInfo.h  GeometryInfo.h  OptimizationParams.h  PositionPreset.h  RobotData.h  TrajectoryPreset.h
lib/imgui/: CMakeLists.txt  glad.c  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp
lib/implot/: CMakeLists.txt  implot.cpp  implot_demo.cpp  implot_items.cpp
src/: CMakeLists.txt  main.cpp
